--- a/README
+++ b/README
@@ -11,3 +11,6 @@ TOMMASO SCHIAVINOTTO and THOMAS STÜTZLE
 
 A Treap with Implicity Key representation was used as alternative to [1] data structures.
 The Local Search statistics and analysis are the main results of the project.
+
+Selected Instances:
+http://www.al.cm.is.nagoya-u.ac.jp/~yagiura/lop/
